2004-01-12  Ethan Merritt  <merritt@u.washington.edu>

	* demo/webify.pl demo/mgr.pl demo/polar.dem demo/random:
	Use 'print' rather than 'pause 0' in demos to avoid empty plots.
	Have webify.pl delete empty *.png files on exit. If gpsavediff is
	available, use it to create a script for each plot. If gnuplot.css
	is present, reference it as a stylesheet. 

2004-01-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c, src/term.c, term/x11.trm, docs/gnuplot.doc: 
	Add sanity checks to 'pause mouse' command; give a warning if mousing
	is not active.  For X11, do *not* terminate 'pause mouse' on normal
	input from stdin. This is necessary to allow 'pause mouse' to work
	from piped input since more commands may already be queued up in stdin.

2004-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d.c (geomean4): Support negative values to help splot surfaces with
	all color coordinates negative and "set pm3d corners2color geomean".

	* gplt_x11.c: Print the debugging message "gnuplot_x11 3769: mouse
	button 1 from window 1 at 0 0" only #ifdef DEBUG.

2004-01-08  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp/configure.in: Remove superfluous file copying commands, now
	taken care of by auto* tools.

	* src/gplt_x11.c(pr_window): Bugfix: static array must be computable
	at compile time.

2004-01-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot.c, term/x11.trm: Set stdin to unbuffered on program entry
	rather than waiting for the start of an X11 plot. All buffered input
	is lost by the call to setvbuf(), so the only safe time to call it is
	before there is any input. This fixes the latest manifestation of the
	"x11 clipboard paste problem", and also the "piping from awk" problem.

2004-01-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in, configure.vms, src/fit.c, src/gplt_x11.c, src/stdfn.h,
	term/ggi.trm, term/x11.trm: Use AC_FUNC_SELECT_ARGTYPES instead of
	AC_FUNC_SELECT and related changes.

	* config/config.amg: Updated.
